<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@drawable/bg_bottom_of_mainactivity"
    android:orientation="horizontal">

    <RadioGroup
        android:id="@+id/main_radio"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="@drawable/bg_bottom_of_mainactivity"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/tabbar_home_selected"
            android:text="@string/string_home" />

        <RadioButton
            android:id="@+id/rb_myChoose"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/tabbar_icon_mychoose_selector"
            android:text="@string/string_my_choose" />

        <RadioButton
            android:id="@+id/rb_dynamic"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/tabbar_icon_dynamic_selector"
            android:text="@string/string_dynamic" />

        <RadioButton
            android:id="@+id/rb_group"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/tabbar_icon_group_selector"
            android:text="@string/string_group" />

        <RadioButton
            android:id="@+id/rb_trading"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/tabbar_icon_trading_selector"
            android:text="@string/string_trading" />

    </RadioGroup>

</LinearLayout>